# python_training

./: 5308项目启动.docx  README.md  UJ23008算法功能需求.docx  anaconda虚拟环境.txt  bofang1.py  copyfile.py  detect.py  detect_trt.py  docker安装readme.txt  dong_ir.py  dong_rgb1.py  export.py  export_fsy.py  export_trt1.py  export_trt2.py  exportr.py  exportr_xk.py  fsyonnx.py  getpath.py  image_show.py  main.py  motion.py  new1.py  process_dataset.py  readme .txt  remove.py  requirements.txt  testvideo.py  testvideo_fsy.py  train.py  train_bird_wm.py  train_bird_wm_all.py  train_bird_wm_all_5s.py  train_bird_wm_all_lite.py  train_bird_wm_all_v8.py  train_bird_wm_swin.py  train_fsy.py.save  train_ghost_wm_5c.py  train_hw_fsy.py  train_mix_wm_2c.py  (+19 more)
articulation/: test.cpp  test.sln  test.vcxproj
articulation/x64/Debug/: test.exe.recipe
data/: 1.py  2.py  2c.yaml  3.py  bird.yaml  bird_all.yaml  mix.yaml  pcub.yaml  person.yaml  person_car.yaml  uav.yaml
data/hyps/: hyp.scratch-low-bird.yaml  hyp.scratch-low-nwd.yaml  hyp.scratch-low.yaml
lib_mottrack/: CMakeLists.txt
lib_mottrack/include/: mottrack.h
lib_mottrack/src/: mottrack.cpp
models/: common.py  swin-yolo.yaml  swintransformer.py  uav.yaml  yolo.py  yolo3.yaml  yolov5m-bird-wm.yaml  yolov5m-hw-fsy.yaml  yolov5m-pcub-wm.yaml  yolov5m-person-car-wm.yaml  yolov5m-rgb-fsy.yaml  yolov5m-rgb-wm-2c.yaml  yolov5m-rgb-wm.yaml  yolov5s-bird-wm.yaml  yolov5s-ghost.yaml  yolov5s-transformer.yaml  yolov5s.yaml  yolov8m-bird-wm.yaml
models/hub/: yolov5s-transformer.yaml
models/原来/: yolo.py
models/可以转onnx/: common.py  yolo.py
movement_detection/: move_det.py  move_det_notrack.py
new_demo/: CMakeLists.txt  谢谢
new_demo/apendens/Ascend/ascend-toolkit/5.10.t20.0.b200/arm64-lmixlinux200/aarch64-linux/include/acl/dvpp/: hi_dvpp.h  hi_dvpp_common.h  hi_dvpp_pngd.h  hi_dvpp_sys.h  hi_dvpp_type.h  hi_dvpp_vb.h  hi_dvpp_vdec.h  hi_dvpp_venc.h  hi_dvpp_vpc.h
new_demo/apendens/Ascend/ascend-toolkit/5.10.t20.0.b200/arm64-lmixlinux200/aarch64-linux/include/acl/ops/: acl_dvpp.h
new_demo/apendens/aarch64-mix210-linux/aarch64-linux-gnu/lib64/: libgomp.so.1
new_demo/doc/: 识别接口说明V1.0.md
new_demo/inc/: acl_options.h  base.h  basearray.h  comdef.h  detection.h  offscreen.h  sizecolorrotate.h
new_demo/src/: acl_options.cpp  basearray.c  detection.cpp  detection_test.cpp  sizecolorrotate.c
new_demo/新建文件夹/: CMakeLists.txt
sample_photo/: CMakeLists.txt  inference_photo.cpp
track/: CMakeLists.txt  main.cpp
utils/: augmentations.py  datasets.py  datasets_bird.py  datasets_pcub.py  loss.py
