project(inference_photo)
# 更换自己的包含路径
include_directories(/home/zhuoyu/fsy/YoloV5-TensorRT-inference-main/TensorRT-8.4.3.1/include)
link_directories(/home/zhuoyu/fsy/YoloV5-TensorRT-inference-main/TensorRT-8.4.3.1/lib)
include_directories(/home/zhuoyu/fsy/YoloV5-TensorRT-inference-main/TensorRT-8.4.3.1/samples/common)
include_directories(/usr/local/cuda-11.6/include)
link_directories(/usr/local/cuda-11.6/lib64)
include_directories(/usr/local/include/opencv4)
link_directories(/usr/local/lib)
add_executable(infer inference_photo.cpp processing.hpp)
find_package(OpenCV 4.5.2 REQUIRED)
target_link_libraries(infer nvinfer)
target_link_libraries(infer cudart)
target_link_libraries(infer opencv_imgcodecs)
